--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,324 +1,260 @@
 #root {
-    /* max-width: 1280px;
+  /* max-width: 1280px;
     margin: 0 auto;
     padding: 2rem; */
-    text-align: justify;
-    font-family: "Quicksand", sans-serif;
+  text-align: justify;
+  font-family: "Quicksand", sans-serif;
 }
 
 .mr-5 {
-    margin-right: 3rem !important;
+  margin-right: 3rem !important;
 }
-
 
 /* Define the fadeInUp animation */
 
 @keyframes fadeInUp {
-    from {
-        opacity: 0;
-        transform: translateY(50%);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
+  from {
+    opacity: 0;
+    transform: translateY(50%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  to {
+    opacity: 0;
+    transform: translateY(50%);
+  }
+}
 
 /* Navbar Component */
 
 .logo {
-    font-family: "daddy rewind", sans-serif;
-    font-weight: 400;
-    font-size: 2em;
-    color: #00a2ed;
-    padding-bottom: 0px !important;
+  font-family: "daddy rewind", sans-serif;
+  font-weight: 400;
+  font-size: 2em;
+  color: #00a2ed;
+  padding-bottom: 0px !important;
 }
 
 .logo:hover {
-    color: #00a2ed;
+  color: #00a2ed;
 }
 
 .nav-item {
-    z-index: 1;
+  z-index: 1;
 }
 
 .navbar-nav {
-    align-items: flex-start;
+  align-items: flex-start;
 }
 
 .fixed-top {
-    position: fixed !important;
+  position: fixed !important;
 }
 
 .topnav {
-    box-shadow: none !important;
-    /* White background with 90% opacity */
-    /* background-color: rgba(255, 255, 255, 0.9); */
-    background-color: rgba(transparent, 0.9) !important;
-}
-
-.container-fluid {
-    height: 70px;
+  box-shadow: none !important;
+  /* White background with 90% opacity */
+  /* background-color: rgba(255, 255, 255, 0.9); */
+  background-color: rgba(transparent, 0.9) !important;
+  /* Apply a blur effect to create a frosted glass effect */
+  backdrop-filter: blur(10px);
+  /* Smooth transition for the background color */
+  transition: background-color 0.3s ease;
 }
 
 @media (min-width: 992px) {
-    .navbar-expand-lg .hamburger-toggler {
-        display: none;
-    }
+  .navbar-expand-lg .hamburger-toggler {
+    display: none;
+  }
 }
 
 .Menuitem {
-    display: none;
-    position: fixed;
-    top: 0px;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    padding-bottom: 100%;
-    background-color: #fff;
-    /* Set the background color */
-    overflow-x: hidden;
-    animation: ease-in-out;
-    transition: 0.5s;
-    /* Set the transition duration */
+  display: none;
+  position: fixed;
+  top: 0px;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  padding-bottom: 100%;
+  background-color: #fff;
+  /* Set the background color */
+  overflow-x: hidden;
+  animation: ease-in-out;
+  transition: 0.5s;
+  /* Set the transition duration */
 }
 
 .navbarmenu {
-    z-index: 1;
+  z-index: 1;
 }
 
 .navbaritems {
-    z-index: 1;
+  z-index: 1;
 }
 
 .nav-link {
-    font-weight: light;
-    cursor: pointer;
-    padding-bottom: 0px !important;
+  font-weight: light;
+  cursor: pointer;
+  padding-bottom: 0px !important;
 }
 
 .nav-link:hover {
-    /* color: #2b50aa; */
-    /* color: #00a2ed !important; */
-    color: #5a5a5a !important;
+  /* color: #2b50aa; */
+  /* color: #00a2ed !important; */
+  color: #5a5a5a !important;
 }
 
 .link {
-    text-decoration: none;
-    color: #00a2ed;
-    cursor: pointer;
+  text-decoration: none;
+  color: #00a2ed;
+  cursor: pointer;
 }
 
 .link:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
-
 /*Home component*/
-
 
 /*class to show components below navbar*/
 
 .mcontainer {
-    padding: 0px;
-    padding-top: 86px;
-    margin: 0px;
+  padding: 0px;
+  padding-top: 86px;
+  margin: 0px;
 }
-
 
 /*Hero Component*/
 
 .hcontainer {
-    /*gradient background*/
-    background: rgb(255, 255, 255);
-    background: linear-gradient( 135deg, rgba(255, 255, 255, 1) 55%, rgba(0, 142, 176, 1) 100%);
-    /* background-color: #fff;
-    background: rgb(255, 255, 255);
-    background: linear-gradient(
-      0deg,
-      rgba(255, 255, 255, 1) 0%,
-      rgba(0, 142, 176, 1) 100%
-    ); */
-    padding-top: 182px;
-    padding-bottom: 2%;
-    margin-right: 0px;
+  background-image: linear-gradient(
+    145deg,
+    rgba(255, 255, 255, 0.31) 53%,
+    #00a2ed 100%
+  );
+  padding-top: 120px;
+  padding-bottom: 50px;
 }
 
 .hero-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0px;
-    margin: 0px;
+  padding-left: 5%;
+  padding-right: 5%;
+  margin: 0;
 }
 
-
-/* .main-event {
-    display: flex;
-    background-color: white;
-    margin-top: 2%;
-} */
-
-
-/* .events {
-    width: 100%;
-} */
-
 .text-container {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    padding: 0px;
-    justify-content: justify;
-    align-items: flex-start;
+  padding-right: 30px;
 }
 
 .text-block {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    text-align: left;
-}
-
-.maine.text-block {
-    padding-left: 0%;
-    padding-right: 15%;
-    text-align: justify;
-}
-
-.maine p.main-text {
-    margin-bottom: 8px;
+  margin-bottom: 20px;
 }
 
 .main-text {
-    font-size: 350%;
-    font-weight: bold;
-    line-height: normal;
-    margin-bottom: 0px;
+  /* font-family: "Poppins", sans-serif; */
+  font-size: 4.5rem;
+  line-height: 4.6875rem;
+  font-weight: bold;
+  margin-bottom: 15px;
+  text-wrap: balance;
+  text-align: justify;
 }
 
 .sub-text {
-    font-size: 20px;
-    font-weight: light;
-    color: #5a5a5a;
-}
-
-.hero-container .main-text,
-.hero-container .sub-text,
-.hero-container .pb-0,
-.main-event .main-text,
-.main-event .sub-text {
-    animation: fadeInUp 1s ease-in-out;
+  font-size: 1.25rem;
+  color: #5a5a5a;
+  text-align: left;
 }
 
 .buttons {
-    display: flex;
-    flex-direction: row;
-}
-
-.maine.buttons {
-    padding-left: 0%;
+  display: flex;
+  gap: 15px;
 }
 
 .main-button {
-    /* background-color: #2b50aa; */
-    background-color: #008eb0;
-    color: white;
-    border: none;
-    border-radius: 20px;
-    padding: 10px 20px;
-    cursor: pointer;
-    text-decoration: none;
-    margin-right: 10px;
-}
-
-.main-button:last-child,
-.sub-button:last-child {
-    margin-right: 0;
+  border-radius: 20px;
+  background-color: #00a2ed;
+  border-color: #00a2ed;
+  border: 1px solid transparent;
+  text-decoration: none;
+  padding: 0.6em 2.3em;
+  cursor: pointer;
+  font-size: 1em;
+  color: #ffffff;
+  background-image: linear-gradient(45deg, transparent 50%, #ffffff 50%);
+  background-position: 25%;
+  background-size: 400%;
+  -webkit-transition: background 500ms ease-in-out, color 500ms ease-in-out;
+  transition: background 500ms ease-in-out, color 500ms ease-in-out;
 }
 
 .main-button:hover {
-    background-color: #00a9b8;
+  background-position: 100%;
+  border-color: #00a2ed;
+  color: #00a2ed;
 }
 
 .sub-button {
-    background-color: transparent;
-    color: #008eb0;
-    border: 1px solid #008eb0;
-    border-radius: 20px;
-    padding: 10px 20px;
-    cursor: pointer;
-    margin-right: 10px;
-}
-
-.main-button,
-.sub-button {
-    transition: background-color 0.3s ease-in-out;
+  background-color: transparent;
+  color: #00a2ed;
+  border: 1px solid #00a2ed;
+  border-radius: 20px;
+  padding: 0.6em 2.3em;
+  font-size: 1em;
 }
 
 .sub-button:hover {
-    background-color: #008eb0;
-    color: white;
-}
-
-.image-container {
-    flex: 1;
-    width: auto;
-    height: auto;
-    padding-right: 5%;
-}
-
-.maine.image-container {
-    padding-right: 0%;
+  background-color: #00a2ed;
+  border-color: #00a2ed;
+  border: 1px solid transparent;
+  color: #ffffff;
+  background-image: linear-gradient(45deg, transparent 50%, #ffffff 50%);
+  background-position: 25%;
+  background-size: 400%;
+  -webkit-transition: background 500ms ease-in-out, color 500ms ease-in-out;
+  transition: background 500ms ease-in-out, color 500ms ease-in-out;
 }
 
 .main-image {
-    width: 90%;
-    height: 100%;
-    object-fit: cover;
-    position: relative;
-    top: 40px;
-}
-
-img.ticketcounter {
-    width: 60%;
-    height: auto;
-    object-fit: cover;
-    padding: 10%;
-    padding-right: 0%;
-    padding-left: 0%;
-    border-radius: 20px;
-    border-radius: 15%;
-}
-
-.main-event.text-container {
-    padding-left: 0px;
-}
-
-@media screen and (max-width: 1000px) {
-    img.ticketcounter {
-        width: 80%;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    img.ticketcounter {
-        width: 100%;
-    }
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  animation: fadeOut 2s forwards;
+  animation-timeline: scroll();
+  filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.5));
 }
 
 @media screen and (max-width: 600px) {
-    .maine.image-container {
-        display: none;
-    }
-    .main-event.text-container,
-    .maine.text-block,
-    .maine.buttons {
-        padding-left: 5%;
-    }
-    .browseevent {
-        padding-top: 15% !important;
-    }
+  .hero-container {
+    flex-direction: column;
+    padding: 15px;
+  }
+  .image-container {
+    margin-top: 20px;
+  }
+}
+
+/*To the Top Button*/
+
+.to-top-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  color: #fff;
+  background-color: #00a2ed !important;
+  border-color: #00a2ed !important;
+  border-radius: 20px !important;
+  padding: 10px 20px !important;
+  cursor: pointer;
+  margin-right: 10px;
+  z-index: 100;
 }
