--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,13 +1,14 @@
 #root {
-  /* max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem; */
   text-align: justify;
   font-family: "Quicksand", sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .mr-5 {
