--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -15,6 +15,11 @@ body {
   margin-right: 3rem !important;
 }
 
+hr {
+  border: 0.5px solid #333;
+  height: 1px;
+}
+
 #section-text {
   color: #00a2ed;
   justify-items: justify;
